<resources>
    <string name="app_name">IntentsAndToastsProj</string>
    <string name="headNum1">Number 1</string>
    <string name="headNum2">Number 2</string>
    <string name="btnOk">OK</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">X</string>
    <string name="div">/</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>